<resources>
    <string name="app_name">Enxaquecapp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Enxaquecapp</string>
    <string name="nav_header_subtitle">Seu companheiro de enxaqueca</string>
    <string name="nav_header_desc">Cabeçalho do menu</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Início</string>
    <string name="menu_about">Sobre o app</string>
    <string name="menu_medicines">Medicamentos</string>
    <string name="menu_account">Minha conta</string>
    <string name="menu_history">Histórico</string>

    <string name="email">E-mail</string>
    <string name="content_description_person">Ícone de uma pessoa</string>
    <string name="password">Senha</string>
    <string name="content_description_lock">Ícone de um cadeado</string>
    <string name="login">Entrar</string>
    <string name="create_account">Criar conta</string>
    <string name="name">Nome</string>
    <string name="password_repeat">Repita a senha</string>
    <string name="birth">Nascimento</string>
    <string name="date_format">DD/MM/AAAA</string>
    <string name="male">Masculino</string>
    <string name="female">Feminino</string>
    <string name="about_title">Sobre o App</string>
    <string name="about_text">Enxaquecapp é um aplicativo para auxiliar pessoas com dor de cabeça.\n
        Aqui, o usuário consegue relatar com simplicidade um novo episódio.\n
        O objetivo do app é simplificar o processo de cadastro, e fornecer alguns relatórios com base nos dados do usuário. Os apps atuais exigem muito, são complicados demais. Ninguém quer fazer isso quando está com dor de cabeça.
        \n\n
        O aplicativo foi desenvolvido por Rafael Bourscheid da Silveira e Julio César Sotoriva de Bastiani para a disciplina de Projeto Temático: Aplicativo Móvel\n
        O software é composto por um app em Android nativo usando Kotlin, uma API em C# e um banco de dados.
        \n\n\n
        Ícones de enxaqueca por <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>, obtidos no <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>\n\n
        Emojis de intensidade por <a href="https://www.flaticon.com/authors/vitaly-gorbachev" title="Vitaly Gorbachev">Vitaly Gorbachev</a>, obtidos no <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
    </string>
    <string name="register">Registre-se</string>
    <string name="gender">Gênero</string>
    <string name="episode_duration_title">Duração</string>
    <string name="start">Início</string>
    <string name="end">Fim</string>
    <string name="episode_intensity_title">Intensidade</string>
    <string name="episode_causes_title">Causas</string>
    <string name="episode_causes_place_title">Onde você estava?</string>
    <string name="place_request">Onde você estava?</string>
    <string name="episode_triggers_title">O que pode ter causado?</string>
    <string name="trigger_request">O que pode ter causado?</string>
    <string name="episode_helped">Ajudou?</string>
    <string name="episode_relief_title">Alívio</string>
    <string name="episode_action">O que você fez?</string>
    <string name="cancel">Cancelar</string>
    <string name="remindme">Lembrar</string>
    <string name="save">Salvar</string>
    <string name="submit">Enviar</string>
    <string name="add_medicine">Adicionar medicamento</string>
    <string name="medicine_name">Nome</string>
    <string name="discard">Descartar</string>
    <string name="interval">Intervalo</string>
    <string name="my_medicines">Meus medicamentos</string>
    <string name="episode_end_title">Fim</string>
    <string name="episode_start_title">Início</string>
    <string name="time">Hora</string>
    <string name="date">Data</string>
    <string name="medicine_doses">Nº doses</string>
    <string name="medicine_description">Descrição</string>
    <string name="my_episodes">Meus episódios</string>
    <string name="home_instructions_title">Instruções de uso</string>
    <string name="home_instructions">
        - Use o botão verde para adicionar um episódio\n
        - Use o menu para navegar pelo aplicativo\n
        - Mantenha seus episódios atualizados\n
        - Adicione seus medicamentos ao app
    </string>
</resources>
