<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_medicines"
            android:title="@string/menu_medicines" />

        <item
            android:id="@+id/action_global_register_fragment"
            android:icon="@drawable/ic_mode_edit"
            android:title="@string/menu_account" />

        <item
            android:id="@+id/nav_history"
            android:title="@string/menu_history"
            android:enabled="false" />

        <item
            android:id="@+id/nav_about"
            android:title="@string/menu_about"
            android:icon="@drawable/ic_menu_about"
            />

    </group>
</menu>
